# DeepNeuronSeg

./: .gitignore  DEEPNEURONSEG.yaml  README.md  inference.py  instance_test.ipynb  pyproject.toml  requirements.txt  sam_test.ipynb
DeepNeuronSeg/: QA.py  __main__.py  denoise_model.py  inference.py  main.py  main.txt  utils.py
DeepNeuronSeg/controllers/: about_controller.py  analysis_controller.py  app_controller.py  dataset_controller.py  evaluation_controller.py  generate_labels_controller.py  labeling_controller.py  model_zoo_controller.py  outlier_controller.py  training_controller.py  upload_controller.py
DeepNeuronSeg/models/: about_model.py  analysis_model.py  data_manager.py  dataset_model.py  denoise_model.py  evaluation_model.py  generate_labels_model.py  image_manager.py  labeling_model.py  model_zoo_model.py  outlier_model.py  qa_metrics.py  segmentation_model.py  training_model.py  upload_model.py
DeepNeuronSeg/utils/: data_loader.py  data_management.py  label_parsers.py  utils.py
DeepNeuronSeg/views/: main_window.py
DeepNeuronSeg/views/tabs/: about_view.py  analysis_tab.py  analysis_view.py  dataset_tab.py  dataset_view.py  evaluation_tab.py  evaluation_view.py  generate_labels_tab.py  generate_labels_view.py  labeling_tab.py  labeling_view.py  model_zoo_tab.py  model_zoo_view.py  outlier_tab.py  outlier_view.py  training_tab.py  training_view.py  upload_tab.py  upload_view.py
DeepNeuronSeg/views/widgets/: frame_selection_dialog.py  hideable_input_panel.py  image_display.py  image_label.py
